<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        />


    <ImageView
        android:id="@+id/iv_movie"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_below="@+id/tv_movie_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="movie poster image"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="20sp"
        android:textColor="#fff"
        android:layout_below="@+id/tv_movie_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="220dp"
        android:layout_marginStart="220dp" />
    <TextView
        android:id="@+id/tv_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_average"
        android:textSize="15sp"
        android:textColor="#fff"
        android:layout_below="@+id/tv_year"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="220dp"
        android:layout_marginStart="220dp" />

    <Button
        android:id="@+id/add_to_favorites_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_button"
        android:layout_below="@+id/tv_vote_average"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="17dp"
        android:onClick="addMovieToFavorites"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_movie"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textColor="#fff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/trailers_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_overview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/trailers_label"
        android:textColor="#fff"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trailers_rv"
        android:layout_below="@+id/trailers_label_tv"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        />


    <TextView
        android:id="@+id/tv_error_message_display"
        android:textSize="22sp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />


</RelativeLayout>
</ScrollView>